<resources>
    <string name="app_name">Bustame</string>
    <string name="logo_name1">BUS</string>
    <string name="logo_name2">TAM-E</string>

    <!--첫화면-->
    <string name="btn_start">시작하기</string>
    <string name="btn_login">로그인</string>
    <string name="btn_next">다음</string>
    <string name="btn_prev">이전</string>
    <string name="toolbarItemBack">뒤로가기</string>
    <string name="busNumName"> | </string>

    <!--좌석 선택 화면-->
    <string name="occupantBtnNormal">일반 좌석</string>
    <string name="occupantBtn">교통약자 좌석</string>

    <!--교통약자 유형 선택 화면-->
    <string name="category_btn_disabled">장애인</string>
    <string name="category_btn_old">고령자</string>
    <string name="category_btn_pregnant">임산부</string>
    <string name="category_btn_with_baby">영유아를 동반한 사람</string>
    <string name="category_btn_else">기타</string>

    <string name="btn_previous">이전</string>
    <string name="occupant_intro1">님은</string>
    <string name="occupant_intro2">어떤 좌석 탑승자인가요?</string>


    <!--버스 기사님께 선택 화면-->
    <string name="todelivery_btn_wait">버스 정차 시 조금 기다려주세요.</string>
    <string name="todelivery_btn_nothing">없어요.</string>
    <string name="todelivery_btn_babycar">유모차가 있어요.</string>
    <string name="todelivery_btn_chair">휠체어용 발판을 이용할게요.</string>
    <string name="complete_btn_final">버스타미 이용하러 가기</string>
    <string name="btn_rideBell">승차벨 울리기</string>
    <string name="category_btn_wounded">부상자</string>

    <!--버튼 관련 string-->
    <string name="button_ok">확인</string>

    <!--권한 허용 페이지-->
    <string name="permission_title">원활한 버스타미 사용을 위한\n접근 권한 안내</string>
    <string name="permission_name">필수 접근 권한</string>
    <string name="permission_location">위치 (필수)</string>
    <string name="permission_location_explain">지도맵 내 현재 위치 확인</string>
    <string name="onboarding_first">버스가 그냥 지나쳐가서\n마음이 쓸쓸했나요?</string>
    <string name="onboarding_second">이제 그런 일은 없습니다.</string>
    <string name="login_title">버스타미</string>
    <string name="login_description">버스타미가 안전한 버스 탑승을 도울게요!</string>
    <string name="category_description">교통약자란 장애인, 고령자, 임산부, 영유아를 동반한 사람,\n어린이 등 일상에서 이동에 불편을 느끼는 자로 정의합니다.\n\n승차벨 이용 정보 수집을 위해\n정확한 탑승 유형을 선택하시기 바랍니다.</string>

</resources>