<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="24dp">

        <TextView
            android:id="@+id/tv_permission_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/semi_bold"
            android:lineSpacingExtra="-3dp"
            android:text="@string/permission_title"
            android:textColor="@color/green_1BC866"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_permission_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/semi_bold"
            android:text="@string/permission_name"
            android:textColor="@color/black_575757"
            app:layout_constraintStart_toStartOf="@id/tv_permission_title"
            app:layout_constraintTop_toBottomOf="@id/tv_permission_title" />

        <ImageView
            android:id="@+id/iv_permission_marker"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_permission_marker"
            app:layout_constraintBottom_toBottomOf="@id/tv_permission_location_explain"
            app:layout_constraintStart_toStartOf="@+id/tv_permission_name"
            app:layout_constraintTop_toTopOf="@id/tv_permission_location" />

        <TextView
            android:id="@+id/tv_permission_location"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/bold"
            android:text="@string/permission_location"
            android:textColor="@color/gray_808080"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/iv_permission_marker"
            app:layout_constraintTop_toBottomOf="@id/tv_permission_name" />

        <TextView
            android:id="@+id/tv_permission_location_explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/permission_location_explain"
            android:textColor="@color/gray_808080"
            app:layout_constraintStart_toStartOf="@id/tv_permission_location"
            app:layout_constraintTop_toBottomOf="@id/tv_permission_location" />

        <TextView
            android:id="@+id/btn_permission_ok"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_round_10"
            android:backgroundTint="@color/green_58D78F"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/button_ok"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>