<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetUserOccupants">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/setRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/occupants_rate" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/occupantsName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/setRate"
        app:layout_constraintTop_toBottomOf="@id/setRate"
        app:srcCompat="@drawable/occupants_name" />

    <TextView
        android:id="@+id/nameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/occupantsName"
        app:layout_constraintTop_toBottomOf="@id/occupantsName"
        tools:text="손명지" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/nameValue"
        app:layout_constraintTop_toTopOf="@id/nameValue"
        android:text="@string/occupant_intro1"/>

    <TextView
        android:id="@+id/occupantsIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/nameValue"
        app:layout_constraintTop_toBottomOf="@id/nameValue"
        android:text="@string/occupant_intro2" />

    <Button
        android:id="@+id/btnNormal"
        android:layout_width="316dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/radius"
        android:elevation="80dp"
        android:text="@string/occupantBtn"
        android:textColor="@color/bustame_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/occupantsIntro" />

    <Button
        android:id="@+id/btnOccupant"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/radius"
        android:elevation="80dp"
        android:text="@string/occupantBtnNormal"
        android:textColor="@color/bustame_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnNormal"
        app:layout_constraintStart_toStartOf="@+id/btnNormal"
        app:layout_constraintTop_toBottomOf="@+id/btnNormal" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/radius"
        android:backgroundTint="@color/btnGreen"
        android:text="@string/btn_next"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnOccupant"
        app:layout_constraintStart_toStartOf="@+id/btnOccupant" />


</androidx.constraintlayout.widget.ConstraintLayout>